core/unpackaged/main/default/objects/Lead_Time_Guidance__mdt/Lead_Time_Guidance__mdt.object-meta.xml
<CustomObject>
    <label>Lead Time Guidance</label>
    <pluralLabel>Lead Time Guidance</pluralLabel>
</CustomObject>