core/unpackaged/main/default/objects/Lead_Time_Guidance__mdt/fields/Is_Fallback__c.field-meta.xml
<CustomField>
    <fullName>Is_Fallback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Fallback</label>
    <type>Checkbox</type>
</CustomField>