core/unpackaged/main/default/objects/Lead_Time_Guidance__mdt/fields/Lead_Time_Display_Value__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Display_Value__c</fullName>
    <label>Lead Time Display Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>