core/unpackaged/main/default/objects/Lead_Time_Guidance__mdt/fields/Min_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Min_Quantity__c</fullName>
    <label>Min Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>