core/unpackaged/main/default/objects/Lead_Time_Guidance__mdt/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <length>120</length>
    <type>Text</type>
</CustomField>