core/unpackaged/main/default/objects/Lead_Time_Guidance__mdt/listViews/All_Fields_View.listView-meta.xml
<ListView>
    <fullName>All_Fields_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Product_Category__c</columns>
    <columns>Location_Code__c</columns>
    <columns>Lead_Time_Display_Value__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields View</label>
</ListView>